fix footer alignment and version position

--- a/src/furo/assets/styles/divio/_content.scss
+++ b/src/furo/assets/styles/divio/_content.scss
@@ -97,6 +97,6 @@ hr.docutils {
   min-height: calc(100% - 80px); // substract header and footer
 }
 
-.content > article {
+.content .article-container {
   flex-grow: 1;
 }
