--- a/src/furo/assets/styles/divio/_footer.scss
+++ b/src/furo/assets/styles/divio/_footer.scss
@@ -1,9 +1,10 @@
 .related-information {
   font-size: 14px;
   color: var(--color-foreground-muted);
-  padding-left: 0;
+  padding-top: 14px;
   padding-right: 0;
-  padding-bottom: 20px;
+  padding-bottom: 16px;
+  padding-left: 0;
 
   code {
     font-size: 12px;
