--- a/src/furo/assets/styles/divio/_index.scss
+++ b/src/furo/assets/styles/divio/_index.scss
@@ -4,10 +4,6 @@ html {
   scroll-behavior: smooth;
 }
 
-.content {
-  justify-content: start;
-}
-
 @import "./header";
 @import "./footer";
 @import "./content";
